@@ -128,6 +128,10 @@ sint32 scenario_load_and_play_from_path(const char *path)
         network_close();
     }
 
+    // This ensures that the newly loaded scenario reflects the user's
+    // 'show real names of guests' option, now that it's a global setting
+    peep_update_names(gConfigGeneral.show_real_names_of_guests);
+
     return 1;
 }
 
